# iced_dialog

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  doc.yml
example/: Cargo.toml
example/src/: main.rs
examples/: save.rs
iced_dialog/: all.html  fn.button.html  fn.dialog.html  index.html  sidebar-items.js
iced_dialog/dialog/: constant.DEFAULT_MAX_HEIGHT.html  constant.DEFAULT_MAX_WIDTH.html  fn.default.html  index.html  sidebar-items.js  struct.Dialog.html  struct.Style.html  trait.Catalog.html  type.StyleFn.html
search.desc/iced_dialog/: iced_dialog-desc-0-.js
src/: dialog.rs  lib.rs
src/iced_dialog/: dialog.rs.html  lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/iced_dialog/dialog/: trait.Catalog.js
type.impl/alloc/boxed/: struct.Box.js
